# Sonora

./: .gitignore
Sonora/: App.axaml  App.axaml.cs  GlobalUsings.cs  HostInterface.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  Sonora.csproj  Sonora.sln  ViewLocator.cs
Sonora/Converters/: PathToFileNameConverter.cs  PathToWaveConverter.cs
Sonora/Models/: Wave.cs  WaveModel.cs
Sonora/ViewModels/: FilesViewModel.cs  MainWindowViewModel.cs  ViewModelBase.cs
Sonora/Views/: FilesView.axaml  FilesView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  WaveView.axaml  WaveView.axaml.cs
native/: CMakeLists.txt
native/src/: CMakeLists.txt  audiocontext.c  audiocontext.h  coreclr_delegates.h  device.c  device.h  deviceenumerator.c  deviceenumerator.h  dll.cpp  host-audio.c  host-audio.h  host-wave.h  host.cpp  host.h  hostfxr.h  hostinterface.cpp  hostinterface.h  instrument.c  instrument.h  miniaudio.c  miniaudio.h  nethost.h  oscillator.c  oscillator.h  voice.c  voice.h  wave.c  wave.h
native/test/: CMakeLists.txt  dummy.cpp  midi.cpp
