cmake_minimum_required(VERSION 3.26.0 FATAL_ERROR)

project(Sonora)
set(Sonora_VERSION_MAJOR 0)
set(Sonora_VERSION_MINOR 1)
set(Sonora_VERSION_PATCH 0)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")

add_subdirectory(src)
