cmake_minimum_required(VERSION 3.26.0 FATAL_ERROR)

project(Sonora LANGUAGES C CXX)
set(Sonora_VERSION_MAJOR 0)
set(Sonora_VERSION_MINOR 1)
set(Sonora_VERSION_PATCH 0)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
#set(CMAKE_C_EXTENSIONS OFF)

if(CMAKE_BUILD_TYPE STREQUAL "")
  set(CMAKE_BUILD_TYPE Debug)
  message(STATUS "Build type defaulting to Debug")
endif()

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")

add_subdirectory(src)

if(CMAKE_BUILD_TYPE STREQUAL Debug)
  find_package(Catch2 REQUIRED VERSION 3.3)
  add_subdirectory(test)
endif()
